--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,48 @@
+aioredis==2.0.0
+aiosmtplib==1.1.6
+anyio==3.3.0
 appdirs==1.4.4
+async-timeout==3.0.1
 black==20.8b1
+blinker==1.4
+certifi==2021.5.30
+charset-normalizer==2.0.4
 click==7.1.2
+colorama==0.4.4
 dnspython==2.0.0
-email-validator==1.1.2
-fastapi==0.62.0
+email-validator==1.1.1
+fakeredis==1.6.0
+fastapi==0.68.1
+fastapi-mail==0.4.1
 flake8==3.8.4
 h11==0.11.0
+httpcore==0.13.6
+httpx==0.19.0
 idna==2.10
+Jinja2==3.0.1
+MarkupSafe==2.0.1
 mccabe==0.6.1
 motor==2.3.0
 mypy-extensions==0.4.3
-pathspec==0.8.1
+pathspec==0.8.0
+pip-tools==5.3.1
 pycodestyle==2.6.0
-pydantic==1.7.3
+pydantic==1.8.2
 pyflakes==2.2.0
-pymongo==3.11.1
-regex==2020.11.13
-starlette==0.13.6
-toml==0.10.2
+pymongo==3.11.0
+python-dotenv==0.14.0
+python-multipart==0.0.5
+PyYAML==5.3.1
+redis==3.5.3
+regex==2020.10.23
+rfc3986==1.5.0
+six==1.15.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
+starlette==0.14.2
+toml==0.10.1
 typed-ast==1.4.1
 typing-extensions==3.7.4.3
-uvicorn==0.12.3
+uvicorn==0.12.2
+watchgod==0.6
+websockets==8.1
