--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -55,6 +55,6 @@ jobs:
           # Build a docker container and
           # push it to ECR so that it can
           # be deployed to ECS.
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG --target prod .
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG --target prod  --build-arg USERNAME=${USERNAME}  --build-arg SERVER_NAME=${SERVER_NAME} --build-arg PASS=${PASS} --build-arg EMAIL=${EMAIL}  --build-arg MONGODB_URL=${MONGODB_URL} .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
