--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -4,7 +4,7 @@
 # documentation.
 
 name: Deploy to Amazon ECS
-
+on: push
 env:
   AWS_REGION: eu-central-1                   # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: spp                         # set this to your Amazon ECR repository name
