--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -14,6 +14,8 @@ ENV USERNAME=$USERNAME
 
 COPY ./requirements.txt /api/requirements.txt
 COPY ./app_e3.py /api/app.py
+COPY ./templates /api/templates
+
 
 RUN pip install -r /api/requirements.txt
 
